Closed
Bug 438782
Opened 17 years ago
Closed 17 years ago
Links should not unconditionally receive an accessible action of "jump"
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.9.1a1
People
(Reporter: Jamie, Assigned: surkov)
References
Details
(Keywords: access)
Attachments
(2 files, 1 obsolete file)
|
320 bytes,
text/html
|
Details | |
|
8.87 KB,
patch
|
MarcoZ
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008061105 Minefield/3.0pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008061105 Minefield/3.0pre
Gecko unconditionally exposes link objects with an accessible action of "jump". This is incorrect for links which have no href target (anchors) and no onClick handler, as they perform no action. Where there is an href or an onClick, the action should be "jump" or "click", but where there is neither, there should be no action.
Reproducible: Always
Steps to Reproduce:
1. Open the attached test case.
2. Examine the accessible action for the three link objects.
Actual Results:
The action is "jump" for all link objects.
Expected Results:
The action for each link object should be as follows:
* link object with href: "jump"
* link object with no href or onClick: none
* link object with onClick: "click"
| Reporter | ||
Comment 1•17 years ago
|
||
This sample presents three types of link objects. The actual and expected actions are described above.
| Reporter | ||
Updated•17 years ago
|
Version: unspecified → 1.9.0 Branch
Updated•17 years ago
|
| Assignee | ||
Comment 2•17 years ago
|
||
Assignee: nobody → surkov.alexander
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #324923 -
Flags: review?(marco.zehe)
Comment 3•17 years ago
|
||
Comment on attachment 324923 [details] [diff] [review]
patch (cvs)
1. Please test that the ARIA link also exposes an useful action.
2. Please test the "jump" action on the other links like the normal hyperlink etc., too, so the test catches any possible regressions.
With that fixed, r=me.
Attachment #324923 -
Flags: review?(marco.zehe) → review+
| Assignee | ||
Comment 4•17 years ago
|
||
(In reply to comment #3)
> 2. Please test the "jump" action on the other links like the normal hyperlink
> etc., too, so the test catches any possible regressions.
could you point some examples, that's something different from the <a href=""/>, right?
Comment 5•17 years ago
|
||
Yes, I just want to make sure we test them all in case something changes that may break any of these.
| Assignee | ||
Comment 6•17 years ago
|
||
changed a bit version of previous patch, rerequest review
Attachment #324923 -
Attachment is obsolete: true
Attachment #325697 -
Flags: review?(marco.zehe)
Comment 7•17 years ago
|
||
Comment on attachment 325697 [details] [diff] [review]
patch2
r=me, thanks!
Attachment #325697 -
Flags: review?(marco.zehe) → review+
| Assignee | ||
Comment 8•17 years ago
|
||
checked in on mozilla-central
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•17 years ago
|
||
Verified fixed in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a1pre) Gecko/2008062103 Minefield/3.1a1pre.
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Target Milestone: --- → mozilla1.9.1a1
| Assignee | ||
Updated•17 years ago
|
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•