Bug 438782 – Links should not unconditionally receive an accessible action of jump, r=MarcoZ